# fast_zero_projeto

./: pyproject.toml
fast_zero/: app.py
tests/: test_app.py
